# algrow

./: .gitignore  LICENSE.txt  README.md  REQUIREMENTS.txt  algrow.py  algrow.toml  build_notes.md  dependency_licenses.txt  discgrow.py  discgrow.toml  get_date_list.R  guide.md  image_processing.py  main.py  options.py  pyproject.toml  run.py  setup.py
analysis/: analysis.R  imagej_to_size_per_well.R  lsgr_analysis.R
conf.d/: DefaultOptions.conf  NUIG.conf  NUIG.conf.bak  NUIG2023.conf  default.conf
discgrow/: __main__.py  discgrow.py  options.py
sample_images/: id.csv
sample_images/Ara2012/: README.md  ara2012.conf  arabidopsis.conf  samples.csv
sample_images/palmaria/: algrow_publication_10_mins.conf  algrow_publication_cube_manual.conf  palmaria.conf
scripts/: calc_dice.py
src/: __main__.py  algrow.py  analysis.py  annotation.py  area_calculation.py  calibration.py  config.py  debugger.py  discgrow.py  figurebuilder.py  gui.py  hull.py  image_loading.py  image_processing.py  image_segmentation.py  layout.py  logging.py  options.py  panel.py  picker.py  thresholding.py
src/algrow/: _version.py  gui.py
src/algrow/resources/: dependency_licenses.txt
src/calibration/: app.py  app_o3d.py  calibration.py  hull.py  hull_o3d.py  hull_pixels.py  lasso.py  loading.py  measure.py  measure_layout.py  measure_scale.py  panel.py  popframe.py  scale.py  waiting.py
src/calibration_open3d/: app.py  calibration.py  hull.py  loading.py  points.py
src/options/: custom_types.py  parse_args.py  update_and_verify.py
